# vision-stronghold

./: .gitignore  CMakeLists.txt  wpilibcmakecommand.sh
boot/extlinux/: extlinux.conf
etc/init/: lightdm.override  network-manager.override
include/: kernel.cuh  kernel.hpp
scripts/: Perfmode.sh  camerasettings.sh  checkcamformats.sh  frc1.sh  installpackages.sh  list_settings.sh  pingrobo.sh  start.sh  start1.sh  start2.sh
src/: RoboVisionFRC2016.cpp  kernel.cpp  kernel.cu  main.cpp  main.cpp.zed.old
